<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/main_header_selector"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="161dp"
        android:layout_height="110dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_logo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/title_signin"
        android:textColor="@color/cardview_light_background"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        tools:ignore="MissingConstraints" />





    <LinearLayout
        android:id="@+id/L1"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <EditText
            android:id="@+id/editText1"
            android:layout_width="360dp"
            android:layout_height="46dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_edittext"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/doc_phone"
            android:textSize="16dp"
            android:inputType="phone"
            android:paddingLeft="20dp"
            android:textColor="#000000"
            android:textColorHint="#9E9E9E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <Button
            android:id="@+id/bt1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@color/basic"
            android:padding="14dp"
            android:text="@string/next"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/L2"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textview1"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="Please Enter the verification code we sent you to \n \n+212xxxxxxxxx"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="240dp"
            android:layout_height="46dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edittext"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/doc_verif"
            android:inputType="textPhonetic"
            android:paddingLeft="20dp"
            android:textColor="#000000"
            android:textColorHint="#9E9E9E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <TextView
            android:id="@+id/textview2"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/didn_t_tget_otp_resend"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>



        <Button
            android:id="@+id/bt2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@color/basic"
            android:padding="14dp"
            android:text="@string/buttom_doc"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</LinearLayout>