<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_header_selector"
    tools:context=".activity_sign_up">

 <!-- <ImageView
        android:id="@+id/reg_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/art2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" /> -->


 <!--<View
     android:id="@+id/view3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#6D000000"
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="0dp" />-->

 <!-- <EditText
     android:id="@+id/name"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="168dp"
     android:background="@drawable/edittext_background"
     android:drawableLeft="@drawable/ic_baseline_person_24"
     android:drawablePadding="10dp"
     android:elevation="3dp"
     android:hint="@string/Name"
     android:padding="13dp"
     android:textColor="#888887"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintWidth_percent=".8"
     tools:ignore="MissingConstraints" /> -->


 <ImageView
     android:id="@+id/imageView12"
     android:layout_width="161dp"
     android:layout_height="110dp"
     android:layout_gravity="center_horizontal"
     android:layout_marginTop="28dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:srcCompat="@drawable/home_logo"
     tools:ignore="MissingConstraints" />

 <TextView
     android:id="@+id/textView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:layout_marginTop="20dp"
     android:text="@string/title_signup"
     android:textColor="@color/cardview_light_background"
     android:textSize="32sp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/imageView12"
     tools:ignore="MissingConstraints" />

 <EditText
     android:id="@+id/email_reg"
     android:layout_width="328dp"
     android:layout_height="50dp"
     android:layout_marginTop="28dp"
     android:background="@drawable/rounded_edittext"
     android:drawablePadding="13dp"
     android:elevation="3dp"
     android:hint="@string/email"
     android:padding="13dp"
     android:textColor="#000000"
     android:textColorHint="#9E9E9E"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.506"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/textView"
     app:layout_constraintWidth_percent=".8"
     tools:ignore="MissingConstraints" />

 <EditText
     android:id="@+id/password_reg"
     android:layout_width="329dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="32dp"
     android:background="@drawable/rounded_edittext"
     android:drawablePadding="10dp"
     android:elevation="3dp"
     android:hint="@string/password"
     android:inputType="textPassword"
     android:padding="13dp"
     android:textColor="#000000"
     android:textColorHint="#9E9E9E"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/email_reg"
     app:layout_constraintWidth_percent=".8" />

 <EditText
     android:id="@+id/password_confirm"
     android:layout_width="329dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="28dp"
     android:background="@drawable/rounded_edittext"
     android:drawablePadding="10dp"
     android:elevation="3dp"
     android:hint="@string/passwordconf"
     android:inputType="textPassword"
     android:padding="13dp"
     android:textColor="#000000"
     android:textColorHint="#9E9E9E"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/password_reg"
     app:layout_constraintWidth_percent=".8"
     tools:ignore="MissingConstraints" />

 <Button
     android:id="@+id/reg_btn"
     android:layout_width="150dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="24dp"
     android:background="@color/basic"
     android:padding="14dp"
     android:text="@string/title_signup"
     android:textAllCaps="false"
     android:textColor="#ffffff"
     android:textSize="18sp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.478"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/checkBox" />

 <TextView
     android:id="@+id/textView2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="24dp"
     android:text="@string/signup_ac"
     android:textColor="@color/white"
     android:textSize="18sp"
     android:textStyle="bold"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.388"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/reg_btn" />

 <TextView
     android:id="@+id/sign_in"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/title_signin"
     android:textColor="@color/basic"
     android:textSize="18sp"
     android:textStyle="bold"
     app:layout_constraintBottom_toBottomOf="@+id/textView2"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0"
     app:layout_constraintStart_toEndOf="@+id/textView2"
     app:layout_constraintTop_toTopOf="@+id/textView2" />

 <ProgressBar
     android:id="@+id/progressbar"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginBottom="16dp"
     android:scaleX=".5"
     android:scaleY=".5"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.498"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/textView2"
     app:layout_constraintVertical_bias="0.0" />

 <CheckBox
     android:id="@+id/checkBox"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="32dp"
     android:fontFamily="@font/alice"
     android:text="@string/signup_condition"
     android:textColor="@color/white"
     android:textSize="18sp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/password_confirm"
     tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>