<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AskRole">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="120dp"
            android:layout_height="87dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.945"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/home_logo"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/doctorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/title_AskRole"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView12"
            app:layout_constraintHorizontal_bias="0.188"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/view1"
            style="@style/Divider"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/black"
            android:outlineAmbientShadowColor="@color/black"
            android:outlineSpotShadowColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/doctorTextView"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <ImageView
            android:id="@+id/doctorLogin"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1"
            app:srcCompat="@drawable/doctor" />

        <ImageView
            android:id="@+id/patientLogin"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doctorLogin"
            app:layout_constraintVertical_bias="0.272"
            app:srcCompat="@drawable/patient" />

        <TextView
            android:id="@+id/doctortextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AskRole_doctor"
            android:textColor="@color/basic"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.728"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doctorLogin" />

        <TextView
            android:id="@+id/PatienttextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/AskRole_patient"
            android:textColor="@color/basic"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.725"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patientLogin"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/changMyLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alice"
            android:text="@string/change_lang"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patientLogin"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>